# 2024_ZEUS

./: .gitignore  README.md  build_catkin.sh  close_hri.bash  hello.usd  hri.py  hri_main.py  hri_setup.bash  install_pybind.sh  main_client.py  open_hri.bash  open_nodes.sh  requirements.txt  rules.sh  run_main.sh  start_webots.sh  temp.py  time_test.py  webot_client.py
Tools/: ModifiedpositonLogger.py  __init__.py  positionLogger.py  positionLoggerReal.py  positionLoggerWebots.py  sys_user_interface.py
agent/: agent.py  endeffector.py  fsm.py  real_endeffector.py  tts.py  webots_endeffector.py
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/src/ms_pkg/: CMakeLists.txt  params.yaml
catkin_ws/src/zeus_controller/: CMakeLists.txt  CMakeLists_not.txt  package_not.xml
catkin_ws/src/zeus_controller/src/: zeus_controller.cpp  zeus_controller_test.cpp
config/: __init__.py  config.py  hri_config.py
control/: zeus_pcSide_control.py  zeus_pcSide_inter.py
lib/zeus_kinematics/: __init__.py
media/ui/: gui.ui
module/: __init__.py  chatgptwithvision.py  recommand_from_fer.py
module/ms_library/ai_packages/: __init__.py  face_aligner.py
module/ms_library/custom_utils/: __init__.py  easy_logger.py
pybind/kinematics/: CMakeLists.txt  Transform.cpp  Transform.h  Transform_pybind.cpp  example.cpp  zeusKinematics.cpp  zeusKinematics.h  zeusKinematics_pybind.cpp
run/: faceExpress.py  gripperDyna.py  shakerDyna.py  zeus_pcSide_control.py
runRobotSide/: zeus_robotSide_client.py
shake_traj/: janglelog_241020_2135.txt  shakTemp1.txt  shake1.txt  shake1_old.txt  shake2.txt  shake3.txt  shakeNo.txt  shakeNo1.txt
test/: facialExpressionTest.py  kinematicsBindTest.py
tools/: HRIinputHandler.py  ModifiedpositonLogger.py  __init__.py  positionLoggerReal.py  positionLoggerWebots.py  simple_command_pub_hri.py  simple_command_pub_mod.py  simple_command_pub_real.py  simple_command_pub_sim.py  sys_user_interface.py
utils/: __init__.py  interpolation.py  traj_processing.py  transformTotf.py
webots/controllers/: Makefile
webots/controllers/gj_controller/: Makefile  gj_controller  gj_controller.c
webots/controllers/zeus_controller/: zeus_controller
webots/protos/: .ZEUSARM.cache  zeus_arm_test.proto
webots/protos/ARM_PARTS/: HandBase.proto  base_link.proto  link1.proto  link2.proto  link3.proto  link4.proto  link5.proto  (+1 more)
webots/worlds/: .pr2.wbproj  pr2.wbt
zeus_control/RunRobot/: zeus_control.py
(+108 files in other folders)
